compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__interfering_string_pattern_fails_if_succeeding.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 847
expression: "\npub fn wibble(bits) {\n  case bits {\n    <<\"aaa\", 0, _:bits>> -> 1\n    // If the first one fails, we know this one won't match, so it won't appear\n    // in the final else branch!\n    <<_, \"aa\", 1, _:bits>> -> 2\n    _ -> 3\n  }\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub fn wibble(bits) {
  case bits {
    <<"aaa", 0, _:bits>> -> 1
    // If the first one fails, we know this one won't match, so it won't appear
    // in the final else branch!
    <<_, "aa", 1, _:bits>> -> 2
    _ -> 3
  }
}

----- COMPILED JAVASCRIPT
export function wibble(bits) {
  if (
    bits.bitSize >= 24 &&
    bits.byteAt(0) === 97 && bits.byteAt(1) === 97 && bits.byteAt(2) === 97 &&
    bits.bitSize >= 32
  ) {
    if (bits.byteAt(3) === 0) {
      return 1;
    } else if (bits.byteAt(3) === 1) {
      return 2;
    } else {
      return 3;
    }
  } else {
    return 3;
  }
}
