compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__list_with_guard.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 419
expression: "\npub fn go(x) {\n  case x {\n    [] -> 0\n    [first, ..] if first < 10 -> first * 2\n    [first, ..] -> first\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    [] -> 0
    [first, ..] if first < 10 -> first * 2
    [first, ..] -> first
  }
}


----- COMPILED JAVASCRIPT
import { Empty as $Empty } from "../gleam.mjs";

export function go(x) {
  if (x instanceof $Empty) {
    return 0;
  } else {
    let first = x.head;
    if (first < 10) {
      return first * 2;
    } else {
      let first = x.head;
      return first;
    }
  }
}
