compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__multi_subject_catch_all.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 95
expression: "\npub fn go(x, y) {\n  case x, y {\n    True, True -> 1\n    _, _ -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x, y) {
  case x, y {
    True, True -> 1
    _, _ -> 0
  }
}


----- COMPILED JAVASCRIPT
export function go(x, y) {
  if (x && y) {
    return 1;
  } else {
    return 0;
  }
}
