compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__multi_subject_subject_assignments.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 138
expression: "\npub fn go() {\n  case True, False {\n    True, True -> 1\n    _, _ -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  case True, False {
    True, True -> 1
    _, _ -> 0
  }
}


----- COMPILED JAVASCRIPT
export function go() {
  let $ = true;
  let $1 = false;
  return 0;
}
